# ft_thuring

./: Dockerfile  README.md
app/: Help.hs  Json.hs  Main.hs  Makefile  help.hs  main.hs  package.cabal
