cabal-version: 2.4
name: turing
version: 0.1.0.0
license: MIT
author: boris
maintainer: denoyelle.borris@gmail.com
build-type: Simple
extra-source-files:
  ChangeLog.md
  README.md
executable turing
  main-is: main.hs
  hs-source-dirs:
    .
  ghc-options: -Wall -O2
  build-depends:
    base,
    aeson
  default-language: Haskell2010
